# CausticAST

./: .gitignore  README.md  cst.c  cst.py  node_generics.h  node_types.h  nodes.c  nodes.h  pyproject.toml  serialize.c  serialize.h
nodes/: accesses.ch  atoms.ch  block.h  control.ch  operators.ch  operators.h  procedures.ch  procedures.h  statements.ch  statements.h  types.ch  types.h
protobuf/: _compile.sh  accesses.part.proto  accesses.proto  atoms.part.proto  atoms.proto  control.part.proto  control.proto  nodes.part.proto  nodes.proto  operators.part.proto  operators.proto  procedures.part.proto  procedures.proto  statements.part.proto  statements.proto  types.part.proto  types.proto
src/caustic/cst/: __init__.py  atom.py  bases.py  block.py  constant.py  expression.py  procedure.py  serialize.py  statement.py  typedecl.py
src/caustic/cst/expressions/: __init__.py  atoms.py  operators.py
src/caustic/cst/mods/: m_exception.py
src/caustic/cst/statements/: __init__.py  objects.py
utils/: root_utils.c  root_utils.h  serialize.c  serialize.h
