[project]
name = "caustic.cst"
version = "1.4.0"
dependencies = []
requires-python = ">=3.9"
authors = [{name="Shae.c32"}]
maintainers = []
description = "Caustic's Abstract Syntax Tree, or CST"
readme = "README.md"
keywords = ['caustic', 'language', 'parser', 'ast', 'syntax', 'tree']
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Other",
    "Topic :: File Formats",
    "Topic :: Software Development",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Interpreters",
]

[project.urls]
Homepage = "https://codeberg.org/Caustic/CausticAST"
Issues = "https://codeberg.org/Caustic/CausticAST/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
